--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>resume-generator</title>
+    <script src="https://kit.fontawesome.com/299cf8e5fa.js" crossorigin="anonymous"></script>
+    <title>Resume Generator</title>
   </head>
   <body>
     <div id="root"></div>
